# diffi

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/diffi/: __main__.py  api_form.py  api_worker.py  comparator.py  field_mapping_dialog.py  main_window.py  result_card.py  utils.py
src/diffi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
